<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="211dp"
        android:layout_height="142dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/sysField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sys_hint"
            android:inputType="textPersonName"
            android:text="@string/sys_val_txt" />

        <EditText
            android:id="@+id/diaField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dia_hint"
            android:inputType="textPersonName"
            android:text="@string/dia_val_txt" />

        <EditText
            android:id="@+id/pulseField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pulse_hint"
            android:inputType="textPersonName"
            android:text="@string/pulse_val_txt" />
    </LinearLayout>

    <Button
        android:id="@+id/savePressBtn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:text="@string/save_press_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>