<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VitalScreen">

    <TextView
        android:id="@+id/measureTime"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="55dp"
        android:text="@string/measure_time"
        android:textColor="#47525E"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="226dp"
        android:layout_height="341dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="95dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/measureTime">

        <TextView
            android:id="@+id/sysTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sys_txt" />

        <TextView
            android:id="@+id/sysField"
            android:layout_width="205dp"
            android:layout_height="41dp"
            android:background="#F0F0F0"
            android:text="@string/sys_val_txt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/diaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_txt" />

        <TextView
            android:id="@+id/diaField"
            android:layout_width="205dp"
            android:layout_height="41dp"
            android:background="#F0F0F0"
            android:text="@string/sys_val_txt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pulseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pulse_txt" />

        <TextView
            android:id="@+id/pulseField"
            android:layout_width="205dp"
            android:layout_height="41dp"
            android:background="#F0F0F0"
            android:text="@string/sys_val_txt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tachTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/tachycardia" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rad_yes" />

            <RadioButton
                android:id="@+id/radNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rad_no" />
        </RadioGroup>

        <Button
            android:id="@+id/backToMenuBtnVital"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back_to_main_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>