<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="157dp"
        android:layout_height="169dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pulse_heart" />

    <LinearLayout
        android:id="@+id/formPane"
        android:layout_width="220dp"
        android:layout_height="240dp"
        android:layout_marginTop="260dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="243dp">

            <EditText
                android:id="@+id/usrNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/full_name_field_hint"
                android:inputType="textPersonName"
                android:text="@string/full_name_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/usrAgeField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/age_field_hint"
                android:inputType="textPersonName"
                android:text="@string/age_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usrNameField" />

            <Button
                android:id="@+id/saveNameBtn"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:text="@string/save_name_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuPane"
        android:layout_width="223dp"
        android:layout_height="193dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <Button
            android:id="@+id/formBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/form_btn" />

        <Button
            android:id="@+id/pressBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/pressure_btn" />

        <Button
            android:id="@+id/vitalBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/vital_stat" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>